--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,7 +8,7 @@
     tools:context=".DetailActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container_view_tag"
+        android:id="@+id/detail_frag"
         android:name="com.example.workout.WorkoutDetailFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
