--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".WorkoutDetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -19,5 +20,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/stopwatchContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:name="com.example.workout.StopwatchFragment"
+        tools:layout="@layout/fragment_stopwatch"/>
 
 </LinearLayout>
